--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     environment:
       - POSTGRES_PASSWORD=pass
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - ./.postgres-data:/var/lib/postgresql/data
