--- a/config.example.yaml
+++ b/config.example.yaml
@@ -4,3 +4,9 @@ telegram:
 rateApi:
   key: YOUR_API_KEY
   host: YOUR_API_HOST
+
+database:
+  host: YOUR_HOST
+  port: YOUR_PORT
+  username: YOUR_USERNAME
+  password: YOUR_PASSWORD
