[GOHW-6] add tests for report cache

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -10,3 +10,9 @@ database:
   port: YOUR_PORT
   username: YOUR_USERNAME
   password: YOUR_PASSWORD
+
+cache:
+  host: YOUR_HOST
+  port: YOUR_PORT
+  username: YOUR_USERNAME
+  password: YOUR_PASSWORD 
