--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,3 +46,24 @@ services:
       - 6379:6379
     volumes:
       - ./.redis-data:/data
+
+  kafka:
+    image: wurstmeister/kafka
+    hostname: kafka
+    ports:
+      - "9092:9092"
+    links:
+      - zookeeper
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: "127.0.0.1"
+      KAFKA_ADVERTISED_PORT: "9092"
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_CREATE_TOPICS: "reports:3:1" # почитать про топик
+    depends_on:
+      - zookeeper
+  
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+    
