--- a/config.example.yaml
+++ b/config.example.yaml
@@ -15,4 +15,7 @@ cache:
   host: YOUR_HOST
   port: YOUR_PORT
   username: YOUR_USERNAME
-  password: YOUR_PASSWORD 
+  password: YOUR_PASSWORD
+
+broker:
+  - '<HOST>:<PORT>'
